--- a/views/new.erb
+++ b/views/new.erb
@@ -8,6 +8,7 @@
 			Set name: <br>
 			<input type="text" name="setname" placeholder="set name">
 		</label>
+		<br>
 		<label>
 			Set description: <br>
 			<textarea name="setdescription"></textarea>
@@ -17,11 +18,12 @@
 			Name: <br>
 			<input type="text" name="name" placeholder="name">
 		</label>
-		<label>
+		<label><br>
 			Description<br>
 			<textarea name ="description"></textarea>
 		</label>
 		<label>
+			<br>
 			Photo Url<br>
 			<input type="text" name="photourl" placeholder="photo url">
 		</label>
