--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,25 @@
 <html>
 <head>
 <title> NameDeck </title>
+<link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
 </head>
 <body>
 
 <h1> NameDeck </h1>
 
+<div id = 'container'>
+
 <% bootcamp.deckpeople.each do |person| %>
-<%= person.name %> <br>
-<img src = <%= person.url %>><br>
-<%= person.description %><br><br>
-<% end %>
+
+<div class = 'pic'>
+	<div class = 'info'>
+	<%= person.name %> <br>
+	<%= person.description %><br>
+	</div>
+	<div class = 'picture' style = "background-image: url(<%= person.url %>);"> 
+	</div>
+</div>
+	<% end %>
+</div>
 
 </body>
