--- a/views/display.erb
+++ b/views/display.erb
@@ -6,7 +6,7 @@
 <body>
 
 <h1> NameDeck </h1>
-
+<h2><a href="/test">Quiz Me</a>
 <div id = 'container'>
 
 <% bootcamp.deckpeople.each do |person| %>
