--- a/views/done.erb
+++ b/views/done.erb
@@ -4,8 +4,7 @@
 <link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
 </head>
 <body>
-
-<h1> NameDeck </h1>
-<a href="/newdeck">Create New Deck</a>
-<a href="/display">View Old Decks</a>
+	<h1>You're done!</h1>
+	<a href="/display">Back to set</a>
 </body>
+</html>
