--- a/views/incorrect.erb
+++ b/views/incorrect.erb
@@ -2,8 +2,19 @@
 <head>
 <title> NameDeck </title>
 <link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
+<script type="text/javascript">
+   function toggle_visibility(id) {
+       var e = document.getElementById(id);
+       if(e.style.display == 'block')
+          e.style.display = 'none';
+       else
+          e.style.display = 'block';
+   }
+</script>	
+
 </head>
 <body>
+
 	<h1>You entered: <%= nameinput %>.</h1>
 	<% person = bootcamp.deckpeople.find{|person| person.name == correctname } %>
 	<form method = "post" action = "/test">
@@ -12,5 +23,11 @@
 		<input type = "text" name = "nameinput" placeholder="What's my name?" size = "55px"><br>
 		<input type = "submit" value = "Submit">
 	</form>
+	<form>
+		<input name="category" type="button" value="I give up. Show me the name." onclick="toggle_visibility('actualname');">
+	</form>
+
+  <p id='actualname' style="display: none"> <%= correctname %> </p>
+
 </body>
 </html>
