Fixed session problem

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,5 +7,5 @@
 
 <h1> NameDeck </h1>
 <a href="/newdeck">Create New Deck</a>
-<a href="/display">View Old Decks</a>
+<a href="/gallery">View Old Decks</a>
 </body>
