Added styling and shuffle to display page

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,92 @@
+
+@font-face {
+    font-family: 'card_charactersregular';
+    src: url('cardc___-webfont.eot');
+    src: url('cardc___-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cardc___-webfont.woff') format('woff'),
+         url('cardc___-webfont.ttf') format('truetype'),
+         url('cardc___-webfont.svg#card_charactersregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+* {margin: 0; padding: 0;}
+body {
+  background: #00a651;}
+
+.red {
+	color: red;
+}
+
+h1 {
+	font-size: 100px;
+	text-align: center;
+	font-family: 'card_charactersregular';
+}
+
+a {
+	text-decoration: none;
+	color: black;
+}
+.card {
+  position: relative;
+  float: left;
+  left: 35%;
+  margin-right: 10px;
+  width: 110px;
+  height: 200px;
+  border-radius: 10px;
+  background: #fff;
+  -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+  box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+  padding: 30px;
+}
+
+.card p {
+  text-align: center;
+  font: 25px Georgia, Times New Roman, serif;
+}
+
+.suitdiamonds:before, .suitdiamonds:after {
+  content: "♦";
+  color: #ff0000;
+}
+
+.suitdiamonds:before, .suitdiamonds:after {
+  content: "♦";
+  color: #ff0000;
+}
+ 
+.suithearts:before, .suithearts:after {
+  content: "♥";
+  color: #ff0000;
+}
+ 
+.suitclubs:before, .suitclubs:after {
+  content: "♣";
+  color: #000;
+}
+ 
+.suitspades:before, .suitspades:after {
+  content: "♠";
+  color: #000;
+}
+
+div[class*='suit']:before {
+  position: absolute;
+  font-size: 35px;
+  left: 5px;
+  top: 5px;
+}
+ 
+div[class*='suit']:after {
+  position: absolute;
+  font-size: 35px;
+  right: 5px;
+  bottom: 5px;
+}
+
 .pic {
 	position: relative;
 	display: inline-block;
