--- a/views/display.erb
+++ b/views/display.erb
@@ -9,7 +9,7 @@
 <h2><a href="/test">Quiz Me</a>
 <div id = 'container'>
 
-<% bootcamp.deckpeople.each do |person| %>
+<% bootcamp.deckpeople.shuffle.each do |person| %>
 
 <div class = 'pic'>
 	<div class = 'info'>
