--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,16 @@
 <html>
 <head>
 <title> NameDeck </title>
-<link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
+<link rel = "stylesheet" type = "text/css" href = "/style.css">
 </head>
 <body>
-
-<h1> NameDeck </h1>
-<a href="/newdeck">Create New Deck</a>
-<a href="/gallery">View Old Decks</a>
+<h1 class="red"> NameDeck </h1>
+<a href="/newdeck"><div class="card suitdiamonds">
+  <p>View old decks</p>
+</div></a>
+<a href="/gallery"><div class="card suitdiamonds">
+  <p>Create a new deck</p>
+</div></a>
 </body>
+
+</html>
