--- a/views/index.erb
+++ b/views/index.erb
@@ -2,14 +2,15 @@
 <head>
 <title> NameDeck </title>
 <link rel = "stylesheet" type = "text/css" href = "/style.css">
+<link href='http://fonts.googleapis.com/css?family=Oranienbaum' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<h1 class="red"> NameDeck </h1>
+<h1> NameDeck </h1>
 <a href="/newdeck"><div class="card suitdiamonds">
-  <p>View old decks</p>
+  <p>CREATE A NEW DECK</p>
 </div></a>
 <a href="/gallery"><div class="card suitdiamonds">
-  <p>Create a new deck</p>
+  <p>VIEW OLD DECKS</p>
 </div></a>
 </body>
 
