fonts fixed on display page

--- a/views/display.erb
+++ b/views/display.erb
@@ -2,6 +2,7 @@
 <head>
 <title> NameDeck </title>
 <link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
+<link href='http://fonts.googleapis.com/css?family=Oldenburg' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -12,7 +13,7 @@
 <% bootcamp.deckpeople.shuffle.each do |person| %>
 
 <div class = 'pic'>
-	<div class = 'info'>
+	<div class = 'info suitdiamonds'>
 	<%= person.name %> <br>
 	<%= person.description %><br>
 	</div>
