--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,12 @@
 
+
 @font-face {
-    font-family: 'card_charactersregular';
-    src: url('cardc___-webfont.eot');
-    src: url('cardc___-webfont.eot?#iefix') format('embedded-opentype'),
-         url('cardc___-webfont.woff') format('woff'),
-         url('cardc___-webfont.ttf') format('truetype'),
-         url('cardc___-webfont.svg#card_charactersregular') format('svg');
+    font-family: 'campanileregular';
+    src: url('campanile-webfont.eot');
+    src: url('campanile-webfont.eot?#iefix') format('embedded-opentype'),
+         url('campanile-webfont.woff') format('woff'),
+         url('campanile-webfont.ttf') format('truetype'),
+         url('campanile-webfont.svg#campanileregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -17,10 +18,12 @@ body {
 
 
 h1 {
-	font-size: 100px;
+	font-size: 80px;
+  letter-spacing: -2px;
 	text-align: center;
-	font-family: 'card_charactersregular';
+	font-family: 'Oldenburg', cursive;
 	color: #D83030;
+  font-weight: 400;
 }
 
 a {
@@ -91,8 +94,8 @@ div[class*='suit']:after {
 .pic {
 	position: relative;
   display: inline-block;
-	width: 160px;
-	height: 220px;
+	width: 180px;
+	height: 240px;
 	margin: 20px;  
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -126,9 +129,11 @@ div[class*='suit']:after {
 
 /*back of card in gallery*/
 .info {
-	padding: 10px;
+	padding: 20px;
 	border-radius: 20px;
   background-color: white;
+  font-family: 'Oldenburg', cursive;
+  text-align: center;
   width: 140px;
   height: 200px;
   -webkit-transform: rotateY(180deg);
@@ -136,7 +141,7 @@ div[class*='suit']:after {
 }
 
 #container {
-	width: 800px;
+	width: 900px;
 	margin: 0 auto;
 	display: flex;
 	flex-flow: row wrap;
