--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -10,7 +10,7 @@
 <div id = 'container'>
 	<% alldecks.each do |deck| %>
 			<div class="pic" style="border: 1px solid black">
-				<div class="description suitdiamonds">
+				<div class="description">
 					<a href="/display">
 						<h2><%= deck.deckname %></h2></a>
 						<p><%= deck.deckdescription %></h2></a>
