--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,4 +1,35 @@
-<div id = 'container'>
+<h2> Learn names fast with customized flashcards.</h2>
+<ul class="cards">
+	<li><a href="#url"><b>HOME</b>
+		<i>&#9819;</i></a>
+	</li>
+	<li><a href="#url"><b>ABOUT</b>
+		<i>&#9812;</i></a>
+	</li>
+		<em>&#9827;</em>
+	</li>
+	<li><a href="#url"><b>LEARN</b></a>
+		<span>&#9830;</span>
+		<ul>
+	<li><a href="/display">Tech Bootcamp</a></li>
+			<li><a href="#x">Coworkers</a></li>
+			<li><a href="#">YEI Fellows</a></li>
+		</ul>
+		<span>&#9830;</span>
+	</li>
+	<li><a href="#url"><b>VIEW</b></a>
+		<em>&#9824;</em>
+		<ul>
+			<li><a href="/display">Tech Bootcamp</a></li>
+			<li><a href="#x">Coworkers</a></li>
+			<li><a href="#">YEI Fellows</a></li>
+		</ul>
+		<em>&#9824;</em>
+	</li>
+	<li><a href="/new"><b>CREATE</b><i>&#9818;</i></a></li>
+	<li><a href="#url"><!-- <b>MENU</b> --><i>&#9813;</i></a></li>
+</ul>
+<!-- <div id = 'container'>
 	<% alldecks.each do |deck| %>
 			<div class="pic" style="border: 1px solid black">
 				<div class="description">
@@ -9,3 +40,4 @@
 			</div>
 	<% end %>
 </div>
+ -->
