--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <head>
 <title> NameDeck </title>
 <link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
+<link rel = 'stylesheet' type = 'text/css' href= 'specialstyle.css'>
 <link href='http://fonts.googleapis.com/css?family=Oldenburg' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
    function toggle_visibility(id) {
@@ -14,9 +15,10 @@
 </script>	
 </head>
 <body>
-
+<div id ="header">
 <h1> NameDeck </h1>
 
+</div>
 <%= yield %>
 
 </body>
