--- a/public/specialstyle.css
+++ b/public/specialstyle.css
@@ -1,8 +1,4 @@
-#container {
-	position: absolute;
-	top: 200px;
-	left: 30%;
-}
+
 #info {position:relative; z-index:10;}
 
 .cards {padding:0; margin:50px auto; list-style:none; position:relative; height:270px; width:200px;}
@@ -124,6 +120,7 @@ transform-origin: 100px 470px;
 }
 
 ul.cards li ul {font: bold 15px/20px 'Oldenburg'; padding:0; margin:0; list-style:none; position:absolute; top:25px; left:30px;}
+ul.cards li ul li {padding-bottom: 5px;}
 ul.cards li ul li a {font:bold 14px/16px 'Oldenburg', sans-serif; color:#c00; text-decoration:none;}
 ul.cards li ul li h2 {font:bold 25px 'Oldenburg', sans-serif; color:#c00; text-decoration:none; padding: 5px;}
 ul.cards li ul li a:hover {color:#000;}
@@ -132,4 +129,4 @@ ul.cards li em:nth-of-type(1) {font-size:30px; position:absolute; top:10px; righ
 ul.cards li span:nth-of-type(2) {font-size:30px; position:absolute; top:220px; left:10px; color:#c00;}
 ul.cards li em:nth-of-type(2) {font-size:30px; position:absolute; top:220px; left:10px; color:#000;}
 
-ul.cards li i {font:normal 200px/270px 'Oldenburg', sans-serif; color:#c00; position:absolute; left:0; top:0; width:200px; text-align:center;}
+ul.cards li i {font:normal 180px/260px 'Oldenburg', sans-serif; color:#c00; position:absolute; left:0; top:0; width:200px; text-align:center;}
