--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,31 @@
-<a href="/newdeck"><div class="card suitdiamonds">
-  <p>CREATE A NEW DECK</p>
-</div></a>
-<a href="/gallery"><div class="card suitdiamonds">
-  <p>VIEW OLD DECKS</p>
-</div></a>
+<h3> Learn names fast with customized flashcards.</h3>
+<ul class="cards">
+	<li><a href="#url"><b>HOME</b>
+		<i>&#9819;</i></a>
+	</li>
+	<li><a href="#url"><b>ABOUT</b>
+		<i>&#9812;</i></a>
+	</li>
+		<em>&#9827;</em>
+	</li>
+	<li><a href="#url"><b>LEARN</b></a>
+		<span>&#9830;</span>
+		<ul>
+	<li><a href="/display">Tech Bootcamp</a></li>
+			<li><a href="#x">Coworkers</a></li>
+			<li><a href="#">YEI Fellows</a></li>
+		</ul>
+		<span>&#9830;</span>
+	</li>
+	<li><a href="/gallery"><b>VIEW</b></a>
+		<em>&#9824;</em>
+		<ul>
+			<li><a href="/display">Tech Bootcamp</a></li>
+			<li><a href="/">Coworkers</a></li>
+			<li><a href="/">YEI Fellows</a></li>
+		</ul>
+		<em>&#9824;</em>
+	</li>
+	<li><a href="/newdeck"><b>CREATE</b><i>&#9818;</i></a></li>
+	<li><a href="/"><!-- <b>MENU</b> --><i>&#9813;</i></a></li>
+</ul>
