--- a/views/test.erb
+++ b/views/test.erb
@@ -1,7 +1,12 @@
-<img src = <%= randomperson.url %> height = "400px"> 
+<!-- <img class="quizimage" src = <%= randomperson.url %> height = "400px">  -->
+<div class="quizcontainer">
+<div class = 'quizpic' style = "background-image: url(<%= randomperson.url %>);"> 
+	</div>
 
-<form method = "post" action = "/test">
+
+<form method = "post" action = "/test" autocomplete="off">
 <input type = "hidden" name = "correctname" value = "<%= randomperson.name %>">
 <input type = "text" name = "nameinput" placeholder="What's my name?" size = "55px"><br>
 <input type = "submit" value = "Submit">
 </form>
+</div>
