everything but gallery done woo

--- a/views/display.erb
+++ b/views/display.erb
@@ -1,4 +1,9 @@
-<h2><a href="/test">Quiz Me</a>
+<div class = "quizcontainer">
+
+<a style="text-align: center;" class = "button" href="/test">Quiz Me</a>
+
+</div>
+
 <div id = 'container'>
 
 <% bootcamp.deckpeople.shuffle.each do |person| %>
