--- a/public/style.css
+++ b/public/style.css
@@ -179,7 +179,7 @@ div[class*='suit']:after {
   border-radius: 20px;
   color: ;
 }
-input[type=text] {
+input[type=text], textarea {
   background-color: #D8D8A8;
   font-size: 20px;
   border: 0;
@@ -205,7 +205,7 @@ input[type=submit], input[type=button], .button {
 
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, input[type=button]:hover, .button:hover {
   color: #D8D8A8;
   background-color: #909060;
   border: 2px solid #D8D8A8: 
