--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,1 +1,9 @@
 <h3> Choose your deck.</h3>
+<div class="quizcontainer">
+<div class="gallerycard suitdiamonds">
+</div>
+<div class="gallerycard suitspades">
+</div>
+<div class="gallerycard">
+</div>
+</div>
