--- a/views/correct.erb
+++ b/views/correct.erb
@@ -1,2 +1,4 @@
-<h1>You are correct!</h1>
+<div class="quizcontainer">
+<h3>You are correct!</h3>
 <a href="/test" class="button">Next Person</a>
+</div>
