--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,9 +1,13 @@
 <h3> Choose your deck.</h3>
 <div class="quizcontainer">
+<a href="/display"><div class="gallerycard suitdiamonds">
+<h2>Tech Bootcamp</h2>
+</div></a>
+<a href="#"><div class="gallerycard suitspades">
+<h2>Coworkers</h2>
+</div></a>
+<a href="#">
 <div class="gallerycard suitdiamonds">
-</div>
-<div class="gallerycard suitspades">
-</div>
-<div class="gallerycard">
-</div>
+<h2>YEI Fellows</h2>
+</div></a>
 </div>
