--- a/views/display.erb
+++ b/views/display.erb
@@ -12,9 +12,10 @@
 	<div class = 'info suitdiamonds'>
 	<br>
 	<%= person.name %> 
-		<div class = "description"> 
+	<br>
+		<span class = "description"> 
 		<%= person.description %>
-		</div>
+		</span>
 	</div>
 	<div class = 'picture' style = "background-image: url(<%= person.url %>);"> 
 	</div>
