--- a/views/display.erb
+++ b/views/display.erb
@@ -1,6 +1,6 @@
 <div class = "quizcontainer">
 
-<a style="text-align: center;" class = "button" href="/test">Quiz Me</a>
+<a style="text-align: center;" class = "button big" href="/test">Quiz Me</a>
 
 </div>
 
@@ -9,14 +9,9 @@
 <% bootcamp.deckpeople.shuffle.each do |person| %>
 
 <div class = 'pic'>
-	<div class = 'info suitdiamonds'>
-	<br>
-	<%= person.name %> 
-	<br>
-		<span class = "description"> 
-		<%= person.description %>
-		</span>
-	</div>
+<div class = 'info suitdiamonds'>
+<br><br><%=person.name %><br><span class = "description"><%=person.description %></span>
+</div>
 	<div class = 'picture' style = "background-image: url(<%= person.url %>);"> 
 	</div>
 </div>
