--- a/views/test.erb
+++ b/views/test.erb
@@ -1,5 +1,6 @@
 <!-- <img class="quizimage" src = <%= randomperson.url %> height = "400px">  -->
 <div class="quizcontainer">
+<h3> <%= numleft %> / <%= numtotal %> to go</h3>
 <div class = 'quizpic' style = "background-image: url(<%= randomperson.url %>);"> 
 	</div>
 
