--- a/views/incorrect.erb
+++ b/views/incorrect.erb
@@ -1,5 +1,6 @@
 <% person = bootcamp.deckpeople.find{|person| person.name == correctname } %>
-<div class="quizcontainer"><h3>Try again.</h3>
+<div class="quizcontainer">
+	<h2 class="wrong">Sorry, try again.</h2>
 <form method = "post" action = "/test">
 	<div class="quizpic" style = "background-image: url(<%= person.url %>);"></div> 
 	<input type = "hidden" name = "correctname" value = "<%= person.name %>">
