added fellows deck, fixed a few minor style issues

--- a/views/fellowsdone.erb
+++ b/views/fellowsdone.erb
@@ -1,4 +1,4 @@
 <div class = "quizcontainer">
 <h1>You're done!</h1>
-<a href="/display" class="button">Back to set</a>
+<a href="/fellowsdisplay" class="button">Back to set</a>
 </div>
