--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -6,8 +6,7 @@
 <a href="#"><div class="gallerycard suitspades">
 <h3>Coworkers</h3>
 </div></a>
-<a href="#">
-<div class="gallerycard suitdiamonds">
+<a href="/fellowsdisplay"><div class="gallerycard suitdiamonds">
 <h3>YEI Fellows</h3>
 </div></a>
 </div>
