--- a/views/index.erb
+++ b/views/index.erb
@@ -11,9 +11,9 @@
 	<li><a href="#url"><b>LEARN</b></a>
 		<span>&#9830;</span>
 		<ul>
-	<li><a href="/display">Tech Bootcamp</a></li>
+	<li><a href="/test">Tech Bootcamp</a></li>
 			<li><a href="#x">Coworkers</a></li>
-			<li><a href="#">YEI Fellows</a></li>
+			<li><a href="/fellowstest">YEI Fellows</a></li>
 		</ul>
 		<span>&#9830;</span>
 	</li>
@@ -22,7 +22,7 @@
 		<ul>
 			<li><a href="/display">Tech Bootcamp</a></li>
 			<li><a href="/">Coworkers</a></li>
-			<li><a href="/">YEI Fellows</a></li>
+			<li><a href="/fellowsdisplay">YEI Fellows</a></li>
 		</ul>
 		<em>&#9824;</em>
 	</li>
